--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,7 @@
     "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
     "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "zig": "zig run",
-    "cpp": "cd $dir && g++ main.cpp glad.c -o main -I C:\\OPENGL\\GLEW\\include -I C:\\GLFW\\include -L C:\\GLFW\\lib -L C:\\OPENGL\\GLEW\\lib -lglfw3dll -lglew32 -lopengl32 && .\\main",
+    "cpp": "cd $dir && g++ main.cpp glad.c -o main -I C:\\GLFW\\include -L C:\\GLFW\\lib -lglfw3dll -lopengl32 && .\\main",
     "objective-c": "cd $dir && gcc -framework Cocoa $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "php": "php",
     "python": "python -u",
