--- a/MakeFile
+++ b/MakeFile
@@ -14,7 +14,7 @@ HEADER_DIR = ./header
 TARGET = main
 
 # Source files (can be modified to include more files)                                         #$(SRC_DIR)/texture/texture.cpp
-SRC_BUFFERS = $(SRC_DIR)/Vao_Vbo/EBO.cpp $(SRC_DIR)/Vao_Vbo/VBO.cpp $(SRC_DIR)/Vao_Vbo/VAO.cpp 
+SRC_BUFFERS = $(SRC_DIR)/Vao_Vbo/EBO.cpp $(SRC_DIR)/Vao_Vbo/VBO.cpp $(SRC_DIR)/Vao_Vbo/VAO.cpp $(SRC_DIR)/texture/texture.cpp
 SRCS = main.cpp glad.c $(SRC_DIR)/shader.cpp $(SRC_BUFFERS) $(SRC_DIR)/stb.o
 
 # Object files (generated from source files)
